# graphql-schema-diff

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint.yml
schemadiff/: __init__.py  __main__.py  allow_list.py  formatting.py  schema_loader.py  validation.py
schemadiff/changes/: __init__.py  argument.py  directive.py  enum.py  field.py  input.py  interface.py  object.py  schema.py  type.py  union.py
schemadiff/diff/: argument.py  directive.py  enum.py  field.py  input_object_type.py  interface.py  object_type.py  schema.py  union_type.py
schemadiff/validation_rules/: __init__.py
tests/: test_allow_list.py  test_change_severity.py  test_changes_as_json.py  test_cli.py  test_formatting.py  test_schema_integration.py  test_schema_loading.py  test_validation_rules.py
tests/diff/: test_argument.py  test_directive.py  test_enum.py  test_field.py  test_input_object.py  test_interface.py  test_object_type.py  test_schema.py  test_union.py
